[package]
name = "{{project-name}}" 
version = "0.1.0"
authors = ["Anthony Whalley <anton@venshare.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6.5", features = ["attributes"] }
async-mongodb-session = "2.0.0"
tide = "0.15.0"
serde = "1.0.117"
serde_urlencoded = "0.7.0"
surf = "2.1.0"
dotenv = "0.15.0"
uuid = { version = "0.8", features = ["v4"] }
mongodb = { version = "1", default-features=false }
serde_json = "1.0.39"
lazy_static = "1"
wither = { version = "0.9.0-alpha.2", features = ["async-std-runtime"], default-features = false }
tide-testing = "0.1.2"
